--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,3 +9,7 @@ psycopg2-binary==2.9.9
 sqlalchemy==2.0.23
 redis==5.0.1
 python-dotenv==1.0.0
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-asyncio==0.21.1
+httpx==0.25.2
