test: Add admin integration tests and reach 86% coverage - Added test_integration_admin.py with 14 tests for dictionary admin CRUD - Fixed main.py endpoints to match service signatures - Added .coveragerc to exclude backup files from coverage - Fixed dictionary creation to auto-generate dict_id from name - Fixed dictionary update to use dict of updates - All 139 tests passing, coverage 86% (exceeded 80% target)

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,7 @@ addopts =
     --cov-report=term-missing
     --cov-report=html:coverage_html
     --cov-fail-under=80
+    --cov-config=.coveragerc
 markers =
     unit: Unit tests (fast, isolated)
     integration: Integration tests (slower, external dependencies)
