--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,3 +13,6 @@ pytest==7.4.3
 pytest-cov==4.1.0
 pytest-asyncio==0.21.1
 httpx==0.25.2
+prometheus-fastapi-instrumentator==6.1.0
+websockets==12.0
+pyyaml==6.0.1
